--- a/assets/styles/landingpage/hero.scss
+++ b/assets/styles/landingpage/hero.scss
@@ -9,14 +9,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
 }
 
 // Hero Banner Styles
 
 .ora-hero-banner {
   background: #22222280;
-  height: 100%;
+  height: auto;
   background-image: url('../images/tire-track-rectangle.png');
   background-repeat: no-repeat;
   background-size: cover;
