--- a/src/templates/ford.pug
+++ b/src/templates/ford.pug
@@ -165,7 +165,7 @@ html
               |  BOOK A FREE CONSULTATION
         .ora-about-right
           a.ora-img-box(href="https://www.financeit.ca/en/direct/payment-plan/cD0xaFdTS3M3NmNMbVI5d0cwcEtGSWV3JnM9MCZ2PTQmZj0mdD0mbD0mYT0yMjczNTM=/apply" title="Financing link")
-            img(src="/financeit-ad.png" alt="Apply for financing")
+            img(src="../../assets/images/financeit-ad.png" alt="Apply for financing")
       // Review Section ----------------------------------------:
       .ora-review
         .ora-review-left
