--- a/src/templates/dodge.pug
+++ b/src/templates/dodge.pug
@@ -4,7 +4,7 @@ html
   body
     .ora-page-container
       // Hero Section ----------------------------------------:
-      .ora-hero
+      .ora-hero.--dodge
         .ora-hero-banner
           .ora-hero-logo
             img(src="../../assets/images/ora-logo.svg" alt="Offroad Addiction Logo")
@@ -24,13 +24,13 @@ html
               |OFFROAD READY
             .ora-title-line
           .ora-threeblock-blocks
-            .ora-threeblock-block.--shock
+            .ora-threeblock-block.--dodge-lift
               h3
                 |LIFT<br/>KITS
-            .ora-threeblock-block.--tire
+            .ora-threeblock-block.--dodge-tire
               h3
                 |TIRES
-            .ora-threeblock-block.--recovery
+            .ora-threeblock-block.--dodge-winches
               h3
                 |WINCHES
         .ora-gallery-threeblock
@@ -39,13 +39,13 @@ html
               |EXTERIOR
             .ora-title-line
           .ora-threeblock-blocks
-            .ora-threeblock-block.--lights
+            .ora-threeblock-block.--dodge-covers
               h3
                 |TONNEAU<br/>COVERS
-            .ora-threeblock-block.--flare
+            .ora-threeblock-block.--dodge-steps
               h3
                 |STEPS
-            .ora-threeblock-block.--wheels
+            .ora-threeblock-block.--dodge-wheels
               h3
                 |WHEELS
         .ora-gallery-cta
@@ -218,7 +218,7 @@ html
             iframe(width="560" height="315" src="https://www.youtube.com/embed/bMeN0bhf724" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
       // Pre-footer Section ----------------------------------------:
       .ora-prefooter
-        .ora-hero
+        .ora-hero.--dodge-footer
           .ora-hero-banner.--alt
             .ora-hero-logo
               img(src="../../assets/images/ora-logo.svg" alt="Offroad Addiction logo")
