--- a/assets/styles/landingpage/hero.scss
+++ b/assets/styles/landingpage/hero.scss
@@ -17,17 +17,21 @@
   &.--dodge-footer {
     background-image: url('../images/dodge/dodge-footer-hero.png');
   }
-  
-  &.--ford {
-    background-image: url('../images/dodge/dodge-hero-image.png');
-  }
 
   &.--chevy {
-    background-image: url('../images/dodge/dodge-hero-image.png');
+    background-image: url('../images/chevy/chevy-hero-image.png');
   }
 
-  &.--specialty {
-    background-image: url('../images/dodge/dodge-hero-image.png');
+  &.--chevy-footer {
+    background-image: url('../images/chevy/chevy-footer-hero.png');
+  }
+  
+  &.--ford {
+    background-image: url('../images/ford/ford-hero-image.png');
+  }
+
+  &.--ford-footer {
+    background-image: url('../images/ford/ford-footer-hero.png');
   }
 }
 
