--- a/src/templates/chevy.pug
+++ b/src/templates/chevy.pug
@@ -4,14 +4,14 @@ html
   body
     .ora-page-container
       // Hero Section ----------------------------------------:
-      .ora-hero
+      .ora-hero.--chevy
         .ora-hero-banner
           .ora-hero-logo
             img(src="../../assets/images/ora-logo.svg" alt="Offroad Addiction Logo")
           .ora-hero-bigtext
             img(src="../../assets/images/4x4-logo-primary.svg" alt="Build your dream 4x4")
           p
-            |Our in-house team of experienced certified auto technicians are ready to <b>make your dream Jeep a reality.</b>
+            |Our well-equipped in-house workshop bays and experienced certified auto technicians are ready to <b>build the Silverado of your dreams</b>.
           a.ora-btn.--light(href="http://offroadaddict.simplybook.me/" title="Book a free consultation")
             |  BOOK A FREE CONSULTATION
           p
@@ -24,28 +24,28 @@ html
               |OFFROAD READY
             .ora-title-line
           .ora-threeblock-blocks
-            .ora-threeblock-block.--shock
+            .ora-threeblock-block.--chevy-lift
               h3
                 |LIFT<br/>KITS
-            .ora-threeblock-block.--tire
+            .ora-threeblock-block.--chevy-tire
               h3
                 |TIRES
-            .ora-threeblock-block.--recovery
+            .ora-threeblock-block.--chevy-steps
               h3
-                |RECOVERY<br/>GEARS
+                |STEPS
         .ora-gallery-threeblock
           .ora-title
             h2
               |EXTERIOR
             .ora-title-line
           .ora-threeblock-blocks
-            .ora-threeblock-block.--lights
+            .ora-threeblock-block.--chevy-covers
               h3
-                |LIGHTS &amp;<br/>LIGHT BARS
-            .ora-threeblock-block.--flare
+                |TONNEAU<br/>COVERS
+            .ora-threeblock-block.--chevy-bumpers
               h3
-                |FLARE
-            .ora-threeblock-block.--wheels
+                |BUMPERS
+            .ora-threeblock-block.--chevy-wheels
               h3
                 |WHEELS
         .ora-gallery-cta
@@ -62,9 +62,7 @@ html
             .ora-img-box
               img.ora-about-blurb-banner(src="../../assets/images/aftermarket-parts.png" alt="Aftermarket parts and accessories")
             p
-              |We only choose products that are tough enough for life on the trails, backed by our quality, in-house installations and service guarantee.
-            p
-              |Long drive to our state-of-the-art facility? Build your dream truck from the comfort of home, if you live in Ontario, we will send our custom trailer to you. Don’t wait, book your free consultation today!
+              |We choose the products that are strong enough for life on the trails, with quality that matches our service. Long drive to our state-of-the-art facility? We’ll go to you, load your truck in our custom trailer, and bring it back just how you saw it in your dreams. Wait no more, book your free consultation now!
           .ora-about-list
             .ora-list-boxes.--left
               .ora-list-box
@@ -220,7 +218,7 @@ html
             iframe(width="560" height="315" src="https://www.youtube.com/embed/bMeN0bhf724" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
       // Pre-footer Section ----------------------------------------:
       .ora-prefooter
-        .ora-hero
+        .ora-hero.--chevy-footer
           .ora-hero-banner.--alt
             .ora-hero-logo
               img(src="../../assets/images/ora-logo.svg" alt="Offroad Addiction logo")
@@ -236,7 +234,7 @@ html
               |ABOUT US
             .ora-title-line
           p
-            |Off Road Addiction was created by Ryan Stoangi in 2004 from his passion for off-road and performance motorsports. Ryan and his team strive for excellence in customer satisfaction and service. With over 80 years of combined technical experience, the Off Road Addiction team provides quality installations and the right advice on your dream build or project. Done right the first time, every time.
+            |Off Road Addiction was created by Ryan Stoangi in 2004 from his passion for off-road and performance motorsports. Ryan and his team always strive for excellence in customer satisfaction, sales, and service. With over 80 years of combined technical experience, at Off Road Addiction you’ll get quality installation and the right advice on your build or project the first time, every time.
         .ora-footer-mailing
           .ora-img-box
             img(src="../../assets/images/join-our-mailing-list.png" alt="Join our mailing list")
@@ -284,10 +282,10 @@ html
               p
                 |Off Road Addiction<br/>45025 Talbot Line<br/>St Thomas, ON N5P 3S7
               a.ora-get-directions(href="https://www.google.ca/maps/place/Off+Road+Addiction/@42.7763794,-81.1035633,17z/data=!3m1!4b1!4m5!3m4!1s0x882eed21fc18153f:0x6fc663584461ad3d!8m2!3d42.7763794!4d-81.1013746" title="Directions")
-                |Get Directions
+                |GET DIRECTIONS
             .ora-footer-contact-box
               p
-                |Monday – Friday: 9AM - 6PM<br/>Saturday: 9AM - 2PM<br/>Sunday: Closed
+                |Monday – Friday (9AM - 6PM)<br/>Saturday: 9AM - 2PM<br/>Sunday: Closed
             .ora-footer-contact-box
               p
                 |Phone: 519-451-6076<br/>Toll Free: 1-87-309-7623<br/>Fax: 519-637-7373
