--- a/src/templates/ford.pug
+++ b/src/templates/ford.pug
@@ -11,7 +11,7 @@ html
           .ora-hero-bigtext
             img(src="../../assets/images/4x4-logo-primary.svg" alt="Build your dream 4x4")
           p
-            |Our well-equipped in-house workshop bays and experienced certified auto technicians are ready to <b>build the Silverado of your dreams</b>.
+            |Our well-equipped in-house workshop bays and experienced certified auto technicians are ready to <b>build the F150 of your dreams</b>.
           a.ora-btn.--light(href="http://offroadaddict.simplybook.me/" title="Book a free consultation")
             |  BOOK A FREE CONSULTATION
           p
@@ -24,28 +24,28 @@ html
               |OFFROAD READY
             .ora-title-line
           .ora-threeblock-blocks
-            .ora-threeblock-block.--chevy-lift
+            .ora-threeblock-block.--ford-lift
               h3
                 |LIFT<br/>KITS
-            .ora-threeblock-block.--chevy-tire
+            .ora-threeblock-block.--ford-tire
               h3
                 |TIRES
-            .ora-threeblock-block.--chevy-steps
+            .ora-threeblock-block.--ford-bumpers
               h3
-                |STEPS
+                |BUMPERS
         .ora-gallery-threeblock
           .ora-title
             h2
               |EXTERIOR
             .ora-title-line
           .ora-threeblock-blocks
-            .ora-threeblock-block.--chevy-covers
+            .ora-threeblock-block.--ford-covers
               h3
                 |TONNEAU<br/>COVERS
-            .ora-threeblock-block.--chevy-bumpers
+            .ora-threeblock-block.--ford-flare
               h3
-                |BUMPERS
-            .ora-threeblock-block.--chevy-wheels
+                |FLARE
+            .ora-threeblock-block.--ford-wheels
               h3
                 |WHEELS
         .ora-gallery-cta
@@ -218,7 +218,7 @@ html
             iframe(width="560" height="315" src="https://www.youtube.com/embed/bMeN0bhf724" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
       // Pre-footer Section ----------------------------------------:
       .ora-prefooter
-        .ora-hero.--chevy-footer
+        .ora-hero.--ford-footer
           .ora-hero-banner.--alt
             .ora-hero-logo
               img(src="../../assets/images/ora-logo.svg" alt="Offroad Addiction logo")
