Updated Ford video and review text

--- a/src/templates/ford.pug
+++ b/src/templates/ford.pug
@@ -174,11 +174,11 @@ html
           .ora-reviews-boxes
             .ora-review-box
               h4
-                |JK LIFTKIT &amp; SHOCKS
+                |F150 COMPLIMENTS
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |My F150 and I always get compliments wherever we go. Tire, rims, lights, railings, covers you name it, they do it.
               span.ora-review-box-author
-                |Jeff H.
+                |Joel R.
               .ora-review-stars
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
@@ -189,9 +189,9 @@ html
               h4
                 |LIFTS, WHEELS &amp; TIRES
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |I love my truck and what you have done to it. If anyone wants to lift their truck, I’ll recommend they go to you guys.
               span.ora-review-box-author
-                |Gerhard M.
+                |Gerard M.
               .ora-review-stars
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
@@ -202,7 +202,7 @@ html
               h4
                 |TURNED MY TRUCK INTO A DREAM
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |I gave them the parts list and they not only got them but put all the parts on with the matching paint. Great job guys I’m in love with my truck.
               span.ora-review-box-author
                 |Rob M.
               .ora-review-stars
@@ -212,10 +212,10 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
         .ora-review-right
-          .ora-video-title
-            img(src="../../assets/images/video-title.png" alt ="Custom built jeep wrangler")
+          .ora-video-title.--ford
+            img(src="../../assets/images/ford/ford-video-title.png" alt ="F150 video")
           .ora-video-box
-            iframe(width="560" height="315" src="https://www.youtube.com/embed/bMeN0bhf724" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/VXFBoCVesyg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
       // Pre-footer Section ----------------------------------------:
       .ora-prefooter
         .ora-hero.--ford-footer
