--- a/assets/styles/landingpage/review.scss
+++ b/assets/styles/landingpage/review.scss
@@ -57,6 +57,10 @@
     width: 100%;
     margin: 0 0 vw-phone(9);
 
+    &.--ford {
+      max-width: 210px;
+    }
+
     @media #{$tablet-up} {
       margin: 0 0 vw-tablet(17);
     }
