Finished chevy page other than video title graphic

--- a/src/templates/chevy.pug
+++ b/src/templates/chevy.pug
@@ -174,11 +174,11 @@ html
           .ora-reviews-boxes
             .ora-review-box
               h4
-                |JK LIFTKIT &amp; SHOCKS
+                |WESTIN STEPS &amp; HUSKY MUD FLAPS
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |Just had some Westin steps and Husky mud flaps installed on my new Silverado. Looks great! Thanks for your help Aaron!
               span.ora-review-box-author
-                |Jeff H.
+                |Mark W.
               .ora-review-stars
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
@@ -187,11 +187,11 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
             .ora-review-box
               h4
-                |LIFTS, WHEELS &amp; TIRES
+                |EXPERTS IN WHAT THEY DO
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |Having the entire vehicle stand out and sound great really gets people looking and taking notice. Well worth the investment!
               span.ora-review-box-author
-                |Gerhard M.
+                |Derek A.
               .ora-review-stars
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
@@ -202,7 +202,7 @@ html
               h4
                 |TURNED MY TRUCK INTO A DREAM
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |I gave them the parts list and they not only got them but put all the parts on with the matching paint. Great job guys I’m in love with my truck.
               span.ora-review-box-author
                 |Rob M.
               .ora-review-stars
@@ -213,9 +213,9 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
         .ora-review-right
           .ora-video-title
-            img(src="../../assets/images/video-title.png" alt ="Custom built jeep wrangler")
+            img(src="../../assets/images/video-title.png" alt ="GMC Sierra 2500 video")
           .ora-video-box
-            iframe(width="560" height="315" src="https://www.youtube.com/embed/bMeN0bhf724" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/fETBVG6fbyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
       // Pre-footer Section ----------------------------------------:
       .ora-prefooter
         .ora-hero.--chevy-footer
