--- a/src/templates/chevy.pug
+++ b/src/templates/chevy.pug
@@ -212,8 +212,8 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
         .ora-review-right
-          .ora-video-title
-            img(src="../../assets/images/video-title.png" alt ="GMC Sierra 2500 video")
+          .ora-video-title.--chevy
+            img(src="../../assets/images/chevy/chevy-video-title.png" alt ="GMC Sierra 2500 video")
           .ora-video-box
             iframe(width="560" height="315" src="https://www.youtube.com/embed/fETBVG6fbyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
       // Pre-footer Section ----------------------------------------:
