--- a/src/templates/dodge.pug
+++ b/src/templates/dodge.pug
@@ -212,8 +212,8 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
         .ora-review-right
-          .ora-video-title
-            img(src="../../assets/images/video-title.png" alt ="Dodge RAM video")
+          .ora-video-title.--dodge
+            img(src="../../assets/images/dodge/ram-video-title.png" alt ="Dodge RAM video")
           .ora-video-box
             iframe(width="560" height="315" src="https://www.youtube.com/embed/Iw2R7ROPBqs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
       // Pre-footer Section ----------------------------------------:
