Added scss entry point for new styles, scavenging what I can from old LP

--- a/assets/styles/global-main.scss
+++ b/assets/styles/global-main.scss
@@ -81,6 +81,11 @@
 @import './index.scss';
 
 /*----
+  Phase 2 Styles
+-----*/
+@import './p2/p2-main.scss';
+
+/*----
   Default Template Styles
 -----*/
 @import './landingpage/about.scss';
