--- a/assets/styles/landingpage/footer.scss
+++ b/assets/styles/landingpage/footer.scss
@@ -19,7 +19,7 @@
 
   @media #{$laptop-up} {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     padding: vw-laptop(100) 14vw vw-laptop(115);
   }
 
@@ -66,81 +66,6 @@
 
     @media #{$desktop-up} {
       font-size: vw-desktop(18);
-    }
-  }
-}
-
-// Footer Mailing Section
-
-.ora-footer-mailing {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 0 vw-phone(75) 0;
-
-  @media #{$tablet-only} {
-    margin: 0 0 vw-tablet(100) 0;
-  }
-
-  @media #{$laptop-up} {
-    width: vw-laptop(300);
-    margin: 0;
-  }
-
-  @media #{$desktop-up} {
-    width: vw-desktop(300);
-  }
-
-  .ora-img-box {
-    max-width: 310px;
-    width: vw-phone(250);
-
-    @media #{$tablet-only} {
-      width: vw-tablet(300);
-    }
-
-    @media #{$laptop-up} {
-      width: 100%;
-    }
-
-    img {
-      width: 100%;
-    }
-  }
-
-  a {
-    margin: vw-phone(17) 0 0;
-
-    @media #{$tablet-only} {
-      margin: vw-tablet(19) 0 0;
-    }
-
-    @media #{$laptop-up} {
-      margin: vw-laptop(20) 0 0;
-    }
-
-    @media #{$desktop-up} {
-      margin: vw-desktop(20) 0 0;
-    }
-  }
-
-  .indicates-required {
-    text-align: right;
-    font-size: 12px;
-    color: $ora-green;
-    margin: vw-phone(5) 0 0;
-
-    @media #{$tablet-only} {
-      margin: vw-tablet(5) 0 0;
-    }
-
-    @media #{$laptop-up} {
-      margin: vw-laptop(5) 0 0;
-    }
-
-    @media #{$desktop-up} {
-      margin: vw-desktop(5) 0 0;
     }
   }
 }
