Added sticky bar

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -3,6 +3,86 @@ html
   include ../shared/meta-head.pug
   body
     .ora-page-container
+      // Sticky Bar ----------------------------------------:
+      .ora-sticky-bar
+        .ora-sticky-buttons
+          .ora-sticky-button.--email
+            .ora-sticky-button-icon
+              i.far.fa-envelope
+            .ora-sticky-button-text
+              .ora-sticky-button-text-micro
+                |EMAIL:<br>
+              .ora-sticky-button-text-macro
+                |FREE QUOTE
+          .ora-sticky-button.--phone
+            .ora-sticky-button-icon
+              i.fas.fa-mobile-alt
+            .ora-sticky-button-text
+              .ora-sticky-button-text-micro
+                |CALL:
+              .ora-sticky-button-text-macro
+                |1-877-309-7623
+          .ora-sticky-button.--chat
+            .ora-sticky-button-icon
+              i.far.fa-comments
+            .ora-sticky-button-text
+              .ora-sticky-button-text-micro
+                |ASK NOW:
+              .ora-sticky-button-text-macro
+                |LIVE CHAT
+      // Header Section ----------------------------------------:
+      // Hero Section ----------------------------------------:
+      // Split Section ----------------------------------------:
+      // Builds Section ----------------------------------------:
+      // Review Section ----------------------------------------:
+      .ora-review
+        .ora-review-left
+          .ora-title
+            h2
+              |OFF ROAD CUSTOMER REVIEWS
+            .ora-title-line
+          .ora-reviews-boxes
+            .ora-review-box
+              h4
+                |JK LIFTKIT &amp; SHOCKS
+              p
+                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+              span.ora-review-box-author
+                |Jeff H.
+              .ora-review-stars
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+            .ora-review-box
+              h4
+                |LIFTS, WHEELS &amp; TIRES
+              p
+                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+              span.ora-review-box-author
+                |Gerhard M.
+              .ora-review-stars
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+            .ora-review-box
+              h4
+                |TURNED MY TRUCK INTO A DREAM
+              p
+                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+              span.ora-review-box-author
+                |Rob M.
+              .ora-review-stars
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
+      // Quote Section ----------------------------------------:
+      // Banner Section ----------------------------------------:
       // About Section ----------------------------------------:
       .ora-about
         .ora-about-left
@@ -114,54 +194,8 @@ html
         .ora-about-right
           a.ora-img-box(href="https://www.financeit.ca/en/direct/payment-plan/cD0xaFdTS3M3NmNMbVI5d0cwcEtGSWV3JnM9MCZ2PTQmZj0mdD0mbD0mYT0yMjczNTM=/apply" title="Financing link")
             img(src="../../assets/images/financeit-ad.png" alt="Apply for financing")
-      // Review Section ----------------------------------------:
-      .ora-review
-        .ora-review-left
-          .ora-title
-            h2
-              |OFF ROAD CUSTOMER REVIEWS
-            .ora-title-line
-          .ora-reviews-boxes
-            .ora-review-box
-              h4
-                |JK LIFTKIT &amp; SHOCKS
-              p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
-              span.ora-review-box-author
-                |Jeff H.
-              .ora-review-stars
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-            .ora-review-box
-              h4
-                |LIFTS, WHEELS &amp; TIRES
-              p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
-              span.ora-review-box-author
-                |Gerhard M.
-              .ora-review-stars
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-            .ora-review-box
-              h4
-                |TURNED MY TRUCK INTO A DREAM
-              p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
-              span.ora-review-box-author
-                |Rob M.
-              .ora-review-stars
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-                img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
-      // Footer Section
+      // Mailing Section ----------------------------------------:
+      // Footer Section ----------------------------------------:
       footer.ora-footer
         .ora-footer-about
           .ora-title
