--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -14,6 +14,8 @@ html
                 |EMAIL:<br>
               .ora-sticky-button-text-macro
                 |FREE QUOTE
+            .ora-sticky-button-hidden
+              |EMAIL
           .ora-sticky-button.--phone
             .ora-sticky-button-icon
               i.fas.fa-mobile-alt
@@ -22,6 +24,8 @@ html
                 |CALL:
               .ora-sticky-button-text-macro
                 |1-877-309-7623
+            .ora-sticky-button-hidden
+              |CALL
           .ora-sticky-button.--chat
             .ora-sticky-button-icon
               i.far.fa-comments
@@ -30,6 +34,8 @@ html
                 |ASK NOW:
               .ora-sticky-button-text-macro
                 |LIVE CHAT
+            .ora-sticky-button-hidden
+              |ASK NOW
       // Header Section ----------------------------------------:
       // Hero Section ----------------------------------------:
       // Split Section ----------------------------------------:
