--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -37,6 +37,22 @@ html
             .ora-sticky-button-hidden
               |ASK NOW
       // Header Section ----------------------------------------:
+      .ora-header
+        .ora-header-content
+          .ora-header-logo
+          .ora-header-info
+            .ora-header-contact
+              .ora-header-contact-phone
+                |1-877-309-7623
+              .ora-header-contact-hours
+                |M-F: 9am - 6pm SAT: 9am - 2pm
+            .ora-header-stack
+              .ora-header-quote
+              .ora-header-socials
+                a.fab.fa-instagram(href="/" title="todo")
+                a.fab.fa-facebook-f(href="/" title="todo")
+                a.fab.fa-twitter(href="/" title="todo")
+                a.fab.fa-youtube(href="/" title="todo")
       // Hero Section ----------------------------------------:
       // Split Section ----------------------------------------:
       // Builds Section ----------------------------------------:
