--- a/assets/styles/p2/ora-header.scss
+++ b/assets/styles/p2/ora-header.scss
@@ -24,12 +24,17 @@
 }
 
 .ora-header-logo {
+  max-width: 200px;
   width: 175px;
   height: 115px;
-  background-image: url('../images/ora-logo.svg');
+  background-image: url('../images/ORA_LOGO_grey.svg');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
+
+  @media #{$phone-only} {
+    width: 125px;
+  }
 }
 
 .ora-header-info {
@@ -51,7 +56,7 @@
   }
 
   @media #{$tablet-only} {
-    margin: 0 0 20px;
+    margin: 0 0 10px;
     align-items: flex-end;
   }
 
@@ -72,6 +77,12 @@
     font-size: 20px;
     font-weight: 600;
     color: $ora-green;
+
+    @media #{$phone-only} {
+      font-size: 18px;
+      padding-bottom: 10px;
+      justify-content: center;
+    }
   }
 }
 
@@ -81,11 +92,12 @@
   background-size: 100%;
   background-position: center;
   width: 400px;
-  height: 0;
-  padding-top: 8%;
+  height: 35px;
 
   @media #{$phone-only} {
     background-image: url('../images/p2/free-quote-2lines.png');
+    width: 275px;
+    height: 75px;
   }
 }
 
@@ -95,6 +107,10 @@
   align-items: baseline;
   cursor: pointer;
   margin-top: 10px;
+
+  @media #{$phone-only} {
+    justify-content: center;
+  }
 
   @media #{$tablet-only} {
     margin-top: 5px;
